# api/v1/views/availability.py
@@ -38,6 +38,16 @@ def get_and_post_availability():
         newAvailability.save()
         return jsonify(newAvailability.to_dict()), 201
 
+@app_views.route("/availability/<availability_id>", strict_slashes=False, methods=["GET"])
+def get_availability(availability_id):
+    """This function handles an api that:
+        Get the availability that belongs to the availability_id
+    """
+    availability = storage.get(Availability, availability_id)
+    if not availability:
+        abort(404)
+    return jsonify(availability.to_dict())
+
 @app_views.route("/availability/<course_id>/booked", strict_slashes=False, methods=["GET"])
 def get_booked_availability(course_id):
     """This function handles an api that:
